delete generated files

--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,10 @@ install_manifest.txt
 compile_commands.json
 CTestTestfile.cmake
 
+NvCloth/src/cuda/CuSolverKernelBlob.h
+NvCloth/src/dx/DxSolverKernelBlob.h
 NvCloth/samples/bin/*
+NvCloth/samples/lib/*
 NvCloth/samples/compiler/vc17win64-cmake
 *.exp
 *.lib
