fix CUDA 12+ compile problem and ensure MSVC 1940+ compatibility

--- a/NvCloth/compiler/cmake/windows/CMakeLists.txt
+++ b/NvCloth/compiler/cmake/windows/CMakeLists.txt
@@ -19,7 +19,7 @@ ELSE()
     SET(WIN32_CXX_FLAGS "/arch:SSE2")
 ENDIF()
 
-SET(CMAKE_CXX_FLAGS "/Wall /wd4514 /wd4820 /wd4127 /wd4710 /wd4711 /wd4577 /wd4530 /d2Zi+ /MP /WX /W4 /GF /GS- /GR- /Gd /fp:fast /fp:except- /Zi  ${WIN32_CXX_FLAGS}")
+SET(CMAKE_CXX_FLAGS "/Wall /wd4819 /wd4514 /wd4820 /wd4127 /wd4710 /wd4711 /wd4577 /wd4530 /d2Zi+ /MP /WX /W4 /GF /GS- /GR- /Gd /fp:fast /fp:except- /Zi  ${WIN32_CXX_FLAGS}")
 SET(CMAKE_SHARED_LINKER_FLAGS "/INCREMENTAL:NO")
 SET(CMAKE_SHARED_LINKER_FLAGS_RELEASE " /LTCG")
 SET(CMAKE_SHARED_LINKER_FLAGS_PROFILE " /LTCG")
